@@ -1,3 +1,7 @@
+2009-08-03: aliov@xfce.org
+	* Change the minimum critical level to 5%, the previous commit 
+	was broken and also 1% is too low.
+
 2009-08-03: Ali aliov@xfce.org
 	* Allow 1% as a critical power level option.
 
